--- a/Credit Card Fraud.ipynb
+++ b/Credit Card Fraud.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "File was too big for github so heres the link to the Data: https://www.kaggle.com/mlg-ulb/creditcardfraud/data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
