--- a/Credit Card Fraud.ipynb
+++ b/Credit Card Fraud.ipynb
@@ -689,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scores are the same on test, our optimized weight is 100, and the optimized alpha is 10."
+    "A weight of 100 is still the best performer on test, our optimized weight is 100, and the optimized alpha is 10."
    ]
   },
   {
